--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	
 	<groupId>6</groupId>
-	<artifactId>output6</artifactId>
+	<artifactId>artifact7</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>rteuty</name>
